--- a/app/src/main/res/layout/webactivity_layout.xml
+++ b/app/src/main/res/layout/webactivity_layout.xml
@@ -170,9 +170,13 @@
 
     <ImageView
         android:id="@+id/web_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="24dp"
+        android:focusable="true"
+        android:clickable="true"
+        android:padding="4dp"
+        android:foreground="?selectableItemBackground"
         android:layout_marginBottom="70dp"
         android:background="@drawable/round_bg"
         ads:layout_constraintBottom_toBottomOf="@+id/drawer_layout"
