--- a/app/src/main/res/layout/activity_download_the_apis.xml
+++ b/app/src/main/res/layout/activity_download_the_apis.xml
@@ -83,6 +83,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
+        android:maxLines="1"
         android:textColor="#FFFFFF"
         android:textSize="11sp"
         android:textStyle="bold"
@@ -105,6 +106,7 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:maxLines="1"
         android:visibility="invisible"
         tools:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,6 +122,7 @@
         android:layout_marginTop="16dp"
         android:gravity="end|center"
         android:text=""
+        android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -135,6 +138,7 @@
         android:layout_marginEnd="20dp"
         android:gravity="end|center"
         android:text=""
+        android:maxLines="1"
         android:visibility="invisible"
         tools:visibility="visible"
         android:textColor="@color/black"
@@ -201,6 +205,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
+            android:maxLines="1"
             android:fontFamily="sans-serif-medium"
             android:foreground="?selectableItemBackground"
             android:gravity="center"
@@ -219,6 +224,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
+            android:maxLines="1"
             android:fontFamily="sans-serif-medium"
             android:foreground="?selectableItemBackground"
             android:gravity="center"
@@ -237,6 +243,7 @@
         android:layout_marginEnd="32dp"
         android:text="Checking..."
         android:textSize="14sp"
+        android:maxLines="1"
         android:visibility="visible"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerApiDownloads"
